Latest version with resnet 34 and combined dice loss

--- a/nbs_gil/Severstal Losses.ipynb
+++ b/nbs_gil/Severstal Losses.ipynb
@@ -655,7 +655,8 @@
     "        # For this we use the eps parameter\n",
     "        loss_array = ((numerator + eps) / (denominator + eps))\n",
     "        loss_array = (loss_array).mean(dim=0)\n",
-    "        return ((1 - torch.mean(loss_array)) + F.cross_entropy(output, target.squeeze())) / 2.\n",
+    "        dice_loss = 1 - torch.mean(loss_array)\n",
+    "        return (dice_loss + F.cross_entropy(output, target.squeeze())) / 2.\n",
     "\n",
     "    def __del__(self): pass"
    ]
