--- a/nbs_gil/Severstal Losses.ipynb
+++ b/nbs_gil/Severstal Losses.ipynb
@@ -619,7 +619,7 @@
     "        self.zero_cat_factor = zero_cat_factor\n",
     "\n",
     "    def forward(self, input, target):\n",
-    "        return self.dice_loss(target, input, self.zero_cat_factor)\n",
+    "        return self.dice_loss(target, input, 1e-7, self.zero_cat_factor)\n",
     "\n",
     "    def dice_loss(self, target, output, eps=1e-7, zero_cat_factor=0.1):\n",
     "        '''\n",
@@ -655,8 +655,7 @@
     "        # For this we use the eps parameter\n",
     "        loss_array = ((numerator + eps) / (denominator + eps))\n",
     "        loss_array = (loss_array).mean(dim=0)\n",
-    "        dice_loss = 1 - torch.mean(loss_array)\n",
-    "        return (dice_loss + F.cross_entropy(output, target.squeeze())) / 2.\n",
+    "        return ((1 - torch.mean(loss_array)) + F.cross_entropy(output, target.squeeze())) / 2.\n",
     "\n",
     "    def __del__(self): pass"
    ]
