--- a/nbs_gil/Severstal Competition 15 CombinedDiceLoss resnet50.ipynb
+++ b/nbs_gil/Severstal Competition 15 CombinedDiceLoss resnet50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4  00031f466.jpg_1                                                NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        " PosixPath('/root/.fastai/data/severstal/test_images')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        " PosixPath('/root/.fastai/data/severstal/train_images/82f4c0b69.jpg')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,9 +1153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/deeplearning/lib/python3.7/site-packages/torch/serialization.py:256: UserWarning: Couldn't retrieve source code for container of type CombinedDiceLoss. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    }
+   ],
    "source": [
     "learn.export(file='/kaggle/model/export-3.pkl')"
    ]
@@ -1209,8 +1218,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='4' class='' max='12', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      33.33% [4/12 3:40:11<7:20:22]\n",
+       "      <progress value='11' class='' max='12', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      91.67% [11/12 10:05:53<55:04]\n",
        "    </div>\n",
        "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1267,6 +1276,76 @@
        "      <td>0.736546</td>\n",
        "      <td>54:57</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.196689</td>\n",
+       "      <td>0.149510</td>\n",
+       "      <td>0.981931</td>\n",
+       "      <td>0.738650</td>\n",
+       "      <td>0.927218</td>\n",
+       "      <td>0.750389</td>\n",
+       "      <td>55:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>0.168591</td>\n",
+       "      <td>0.149153</td>\n",
+       "      <td>0.981717</td>\n",
+       "      <td>0.732017</td>\n",
+       "      <td>0.924591</td>\n",
+       "      <td>0.742876</td>\n",
+       "      <td>54:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>0.160975</td>\n",
+       "      <td>0.149011</td>\n",
+       "      <td>0.981583</td>\n",
+       "      <td>0.736230</td>\n",
+       "      <td>0.924841</td>\n",
+       "      <td>0.747138</td>\n",
+       "      <td>55:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>0.193432</td>\n",
+       "      <td>0.148020</td>\n",
+       "      <td>0.981826</td>\n",
+       "      <td>0.734701</td>\n",
+       "      <td>0.926302</td>\n",
+       "      <td>0.747983</td>\n",
+       "      <td>55:06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>0.172943</td>\n",
+       "      <td>0.149686</td>\n",
+       "      <td>0.981722</td>\n",
+       "      <td>0.731143</td>\n",
+       "      <td>0.924288</td>\n",
+       "      <td>0.742234</td>\n",
+       "      <td>54:48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>0.186165</td>\n",
+       "      <td>0.146494</td>\n",
+       "      <td>0.982352</td>\n",
+       "      <td>0.735482</td>\n",
+       "      <td>0.925520</td>\n",
+       "      <td>0.750848</td>\n",
+       "      <td>55:06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>0.189631</td>\n",
+       "      <td>0.146640</td>\n",
+       "      <td>0.982736</td>\n",
+       "      <td>0.728170</td>\n",
+       "      <td>0.926008</td>\n",
+       "      <td>0.749171</td>\n",
+       "      <td>54:49</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>\n",
        "\n",
@@ -1283,8 +1362,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='158' class='' max='5656', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      2.79% [158/5656 01:31<52:46 0.1711]\n",
+       "      <progress value='673' class='' max='5656', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      11.90% [673/5656 06:20<46:55 0.1731]\n",
        "    </div>\n",
        "    "
       ],
@@ -1299,7 +1378,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Better model found at epoch 0 with dice_coefficient value: 0.9271116852760315.\n"
+      "Better model found at epoch 0 with dice_coefficient value: 0.9271116852760315.\n",
+      "Better model found at epoch 4 with dice_coefficient value: 0.9272175431251526.\n",
+      "Epoch 10: reducing lr to 7.411301060149412e-08\n"
      ]
     }
    ],
@@ -1319,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,18 +1409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/deeplearning/lib/python3.7/site-packages/torch/serialization.py:256: UserWarning: Couldn't retrieve source code for container of type CombinedDiceLoss. It won't be checked for correctness upon loading.\n",
-      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "learn.export(file='/kaggle/model/export-4.pkl')"
    ]
