Tested version of TTA

--- a/nbs_gil/Severstal Competition TTA.ipynb
+++ b/nbs_gil/Severstal Competition TTA.ipynb
@@ -321,7 +321,7 @@
     "                   p_lighting:float=0.75, xtra_tfms:Optional[Collection[Transform]]=None)->Collection[Transform]:\n",
     "    \"Utility func to easily create a list of flip, rotate, `zoom`, warp, lighting transforms.\"\n",
     "    res = [\n",
-    "        rand_crop(),\n",
+    "#         rand_crop(),\n",
     "        symmetric_warp(magnitude=(-max_warp,max_warp), p=p_affine),\n",
     "        rotate(degrees=(-max_rotate,max_rotate), p=p_affine),\n",
     "        rand_zoom(scale=(1., max_zoom), p=p_affine)\n",
@@ -370,7 +370,7 @@
     "    test_files = [f.name for f in get_image_files(path/'test_images')]\n",
     "    test_files = test_files[start_pos:end_pos]\n",
     "    print('len(test_files)', len(test_files))\n",
-    "    data = (src.transform(get_simple_transforms(), size=size, tfm_y=True)\n",
+    "    data = (src.transform(get_transforms(max_rotate=25), size=size, tfm_y=True)\n",
     "        .add_test(ImageList.from_df(path=path/'test_images', df=pd.DataFrame(test_files)), \n",
     "                  tfms=None, tfm_y=False)\n",
     "        .databunch(bs=bs)\n",
@@ -659,8 +659,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='1' class='' max='8', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      12.50% [1/8 01:00<07:00]\n",
+       "      <progress value='4' class='' max='8', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      50.00% [4/8 04:04<04:04]\n",
        "    </div>\n",
        "    \n",
        "\n",
@@ -678,8 +678,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='225' class='' max='225', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [225/225 00:54<00:00]\n",
+       "      <progress value='0' class='' max='226', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.00% [0/226 00:00<00:00]\n",
        "    </div>\n",
        "    "
       ],
