Last effort with losses
Former-commit-id: e6d02fae2a31566582b9d5868628f27bca7a8e43

--- a/nbs_gil/Severstal Competition 18 JaccardLoss.ipynb
+++ b/nbs_gil/Severstal Competition 18 JaccardLoss.ipynb
@@ -2187,6 +2187,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.load('bestmodel-6');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/deeplearning/lib/python3.7/site-packages/torch/serialization.py:256: UserWarning: Couldn't retrieve source code for container of type CombinedDiceLoss. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "learn.export(file='/kaggle/model/export-6.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
