--- a/nbs_gil/dl2/02a_why_sqrt5.ipynb
+++ b/nbs_gil/dl2/02a_why_sqrt5.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -20,15 +29,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Jump_to lesson 9 video](https://course.fast.ai/videos/?lesson=9&t=21)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +41,15 @@
     "    path = datasets.download_data(MNIST_URL, ext='.gz')\n",
     "    with gzip.open(path, 'rb') as f:\n",
     "        ((x_train, y_train), (x_valid, y_valid), _) = pickle.load(f, encoding='latin-1')\n",
-    "    return map(tensor, (x_train,y_train,x_valid,y_valid))\n",
-    "\n",
-    "def normalize(x, m, s): return (x-m)/s"
+    "        return map(tensor, (x_train,y_train,x_valid,y_valid))\n",
+    "    \n",
+    "def normalize(x, m, s):\n",
+    "    return (x - m) / s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,19 +58,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train,y_train,x_valid,y_valid = get_data()\n",
-    "train_mean,train_std = x_train.mean(),x_train.std()\n",
+    "train_mean, train_std = x_train.mean(), x_train.std()\n",
     "x_train = normalize(x_train, train_mean, train_std)\n",
     "x_valid = normalize(x_valid, train_mean, train_std)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-7.6999e-06), tensor(1.))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.mean(), x_train.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.0059), tensor(0.9924))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_valid.mean(), x_valid.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -76,43 +119,43 @@
        "(torch.Size([50000, 1, 28, 28]), torch.Size([10000, 1, 28, 28]))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train = x_train.view(-1,1,28,28)\n",
-    "x_valid = x_valid.view(-1,1,28,28)\n",
-    "x_train.shape,x_valid.shape"
+    "x_train = x_train.view(-1, 1, 28, 28)\n",
+    "x_valid = x_valid.view(-1, 1, 28, 28)\n",
+    "x_train.shape, x_valid.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50000, tensor(10))"
+       "(50000, tensor(10), 32)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n,*_ = x_train.shape\n",
-    "c = y_train.max()+1\n",
+    "n, *_ = x_train.shape\n",
+    "c = y_train.max() + 1\n",
     "nh = 32\n",
-    "n,c"
+    "n, c, nh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +182,7 @@
        "torch.Size([100, 1, 28, 28])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,16 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stats(x): return x.mean(),x.std()"
+    "def stats(x):\n",
+    "    return x.mean(), x.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +212,7 @@
        "torch.Size([32, 1, 5, 5])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,30 +223,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((tensor(-0.0043, grad_fn=<MeanBackward1>),\n",
-       "  tensor(0.1156, grad_fn=<StdBackward0>)),\n",
-       " (tensor(0.0212, grad_fn=<MeanBackward1>),\n",
-       "  tensor(0.1176, grad_fn=<StdBackward0>)))"
+       "torch.Size([32, 1, 5, 5])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats(l1.weight),stats(l1.bias)"
+    "l1.weight.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.0029, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.1183, grad_fn=<StdBackward0>))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats(l1.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.0134, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.1097, grad_fn=<StdBackward0>))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats(l1.bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0107, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.5978, grad_fn=<StdBackward0>))"
+       "(tensor(-0.0066, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.6743, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,17 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0267, grad_fn=<MeanBackward1>),\n",
-       " tensor(1.1067, grad_fn=<StdBackward0>))"
+       "(tensor(0.0073, grad_fn=<MeanBackward0>),\n",
+       " tensor(1.0635, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,26 +346,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(x,a=0): return F.leaky_relu(l1(x),a)"
+    "def f1(x, a=0):\n",
+    "    return F.leaky_relu(l1(x), a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.5547, grad_fn=<MeanBackward1>),\n",
-       " tensor(1.0199, grad_fn=<StdBackward0>))"
+       "(tensor(0.5420, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.9842, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,17 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.2219, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.3653, grad_fn=<StdBackward0>))"
+       "(tensor(0.1943, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.3409, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +409,7 @@
        "torch.Size([32, 1, 5, 5])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -345,20 +429,20 @@
        "25"
       ]
      },
-     "execution_count": null,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# receptive field size\n",
-    "rec_fs = l1.weight[0,0].numel()\n",
+    "rec_fs = l1.weight[0][0].numel()\n",
     "rec_fs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -367,19 +451,19 @@
        "(32, 1)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nf,ni,*_ = l1.weight.shape\n",
-    "nf,ni"
+    "nf, ni, *_ = l1.weight.shape\n",
+    "nf, ni"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -388,29 +472,30 @@
        "(25, 800)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fan_in  = ni*rec_fs\n",
-    "fan_out = nf*rec_fs\n",
-    "fan_in,fan_out"
+    "fan_in = ni * rec_fs\n",
+    "fan_out = nf * rec_fs\n",
+    "fan_in, fan_out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gain(a): return math.sqrt(2.0 / (1 + a**2))"
+    "def gain(a):\n",
+    "    return math.sqrt(2.0 / (1 + a**2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +508,7 @@
        " 0.5773502691896257)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,27 +519,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.5788)"
+       "tensor(0.5778)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.zeros(10000).uniform_(-1,1).std()"
+    "torch.zeros(10000).uniform_(-1,1).std() # standard deviation of uniform distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -463,25 +548,25 @@
        "0.5773502691896258"
       ]
      },
-     "execution_count": null,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/math.sqrt(3.)"
+    "1 / math.sqrt(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def kaiming2(x,a, use_fan_out=False):\n",
-    "    nf,ni,*_ = x.shape\n",
-    "    rec_fs = x[0,0].shape.numel()\n",
-    "    fan = nf*rec_fs if use_fan_out else ni*rec_fs\n",
+    "    nf, ni, *_ = x.shape\n",
+    "    rec_fs = x[0][0].numel()\n",
+    "    fan = nf * rec_fs if use_fan_out else ni * rec_fs\n",
     "    std = gain(a) / math.sqrt(fan)\n",
     "    bound = math.sqrt(3.) * std\n",
     "    x.data.uniform_(-bound,bound)"
@@ -489,17 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.5603, grad_fn=<MeanBackward1>),\n",
-       " tensor(1.0921, grad_fn=<StdBackward0>))"
+       "(tensor(0.5234, grad_fn=<MeanBackward0>),\n",
+       " tensor(1.0265, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,17 +596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.2186, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.3437, grad_fn=<StdBackward0>))"
+       "(tensor(0.2078, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.3945, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,33 +618,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Flatten(nn.Module):\n",
-    "    def forward(self,x): return x.view(-1)"
+    "    def forward(self, x):\n",
+    "        return x.view(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "m = nn.Sequential(\n",
-    "    nn.Conv2d(1,8, 5,stride=2,padding=2), nn.ReLU(),\n",
-    "    nn.Conv2d(8,16,3,stride=2,padding=1), nn.ReLU(),\n",
-    "    nn.Conv2d(16,32,3,stride=2,padding=1), nn.ReLU(),\n",
-    "    nn.Conv2d(32,1,3,stride=2,padding=1),\n",
+    "    nn.Conv2d(1, 8, 5, stride=2, padding=2), nn.ReLU(),\n",
+    "    nn.Conv2d(8, 16, 3, stride=2, padding=1), nn.ReLU(),\n",
+    "    nn.Conv2d(16, 32, 3, stride=2, padding=1), nn.ReLU(),\n",
+    "    nn.Conv2d(32, 1, 3, stride=2, padding=1),\n",
     "    nn.AdaptiveAvgPool2d(1),\n",
-    "    Flatten(),\n",
+    "    Flatten()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,17 +654,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0875, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.0065, grad_fn=<StdBackward0>))"
+       "(tensor(0.0037, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.0050, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,26 +676,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = mse(t,y)\n",
+    "l = mse(t, y)\n",
     "l.backward()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0054), tensor(0.0333))"
+       "(tensor(0.0072), tensor(0.0264))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,29 +715,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "for l in m:\n",
-    "    if isinstance(l,nn.Conv2d):\n",
+    "    if isinstance(l, nn.Conv2d):\n",
     "        init.kaiming_uniform_(l.weight)\n",
     "        l.bias.data.zero_()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(-0.0352, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.4043, grad_fn=<StdBackward0>))"
+       "(tensor(-0.0258, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.2819, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,16 +749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0093), tensor(0.4231))"
+       "(tensor(-0.4168), tensor(0.4565))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,22 +767,6 @@
     "l = mse(t,y)\n",
     "l.backward()\n",
     "stats(m[0].weight.grad)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Export"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!./notebook2script.py 02a_why_sqrt5.ipynb"
    ]
   },
   {
