Added super simple model
Former-commit-id: 90c0feecf30a7863952c8b9ab81483699cb720fb

--- a/nbs_gil/data_science_bowl/data_science_bowl_training_1.ipynb
+++ b/nbs_gil/data_science_bowl/data_science_bowl_training_1.ipynb
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,6 +1554,10 @@
     "        return self.comp_train_df.shape\n",
     "    \n",
     "    @property\n",
+    "    def comp_feature_number(self):\n",
+    "        return self.comp_train_x.shape[1]\n",
+    "    \n",
+    "    @property\n",
     "    def comp_test_shape(self):\n",
     "        return self.comp_test_df.shape\n",
     "    \n",
@@ -1574,31 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.data import DataLoader, Dataset, SequentialSampler, RandomSampler\n",
-    "import torch\n",
-    "\n",
-    "def convert_df_to_tensor(df):\n",
-    "    return torch.tensor(df.values)\n",
-    "\n",
-    "class BowlDataSet(Dataset):\n",
-    "    def __init__(self, df_x: pd.DataFrame, df_y: pd.DataFrame):\n",
-    "        self.x = convert_df_to_tensor(df_x)\n",
-    "        self.y = convert_df_to_tensor(df_y)\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.x)\n",
-    "    \n",
-    "    def __getitem__(self, i):\n",
-    "        return self.x[i], self.y[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 269,
    "metadata": {
     "scrolled": true
    },
@@ -1607,6 +1587,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/pandas/core/generic.py:6287: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._update_inplace(new_data)\n",
+      "/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/pandas/core/generic.py:3946: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
+      "  new_axis = axis.drop(labels, errors=errors)\n",
       "/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/ipykernel_launcher.py:33: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -1617,312 +1604,6 @@
    ],
    "source": [
     "feature_engineering = FeatureEngineering(train_df, test_df, train_labels_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comp_train_ds = feature_engineering.comp_train_ds\n",
-    "train_ds = BowlDataSet(comp_train_ds[0], comp_train_ds[1])\n",
-    "valid_ds = BowlDataSet(comp_train_ds[2], comp_train_ds[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14152, 3538, tensor(3))"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_ds), len(valid_ds), train_ds[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comp_train_x = feature_engineering.comp_train_x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>game_time_mean</th>\n",
-       "      <th>game_time_sum</th>\n",
-       "      <th>game_time_min</th>\n",
-       "      <th>game_time_max</th>\n",
-       "      <th>game_time_std</th>\n",
-       "      <th>game_time_skew</th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Assessment</th>\n",
-       "      <th>Clip</th>\n",
-       "      <th>...</th>\n",
-       "      <th>(game_time, skew, NONE)</th>\n",
-       "      <th>(game_time, skew, TREETOPCITY)</th>\n",
-       "      <th>(game_time, std, CRYSTALCAVES)</th>\n",
-       "      <th>(game_time, std, MAGMAPEAK)</th>\n",
-       "      <th>(game_time, std, NONE)</th>\n",
-       "      <th>(game_time, std, TREETOPCITY)</th>\n",
-       "      <th>(game_time, sum, CRYSTALCAVES)</th>\n",
-       "      <th>(game_time, sum, MAGMAPEAK)</th>\n",
-       "      <th>(game_time, sum, NONE)</th>\n",
-       "      <th>(game_time, sum, TREETOPCITY)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>82491.007366</td>\n",
-       "      <td>313548319</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1520600</td>\n",
-       "      <td>159789.192183</td>\n",
-       "      <td>7.504204</td>\n",
-       "      <td>1771.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.704184</td>\n",
-       "      <td>115847.423107</td>\n",
-       "      <td>57216.164087</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>217683.232366</td>\n",
-       "      <td>6.031041e+07</td>\n",
-       "      <td>121568696.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>191979623.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>82491.007366</td>\n",
-       "      <td>313548319</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1520600</td>\n",
-       "      <td>159789.192183</td>\n",
-       "      <td>7.504204</td>\n",
-       "      <td>1771.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.704184</td>\n",
-       "      <td>115847.423107</td>\n",
-       "      <td>57216.164087</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>217683.232366</td>\n",
-       "      <td>6.031041e+07</td>\n",
-       "      <td>121568696.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>191979623.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>82491.007366</td>\n",
-       "      <td>313548319</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1520600</td>\n",
-       "      <td>159789.192183</td>\n",
-       "      <td>7.504204</td>\n",
-       "      <td>1771.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.704184</td>\n",
-       "      <td>115847.423107</td>\n",
-       "      <td>57216.164087</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>217683.232366</td>\n",
-       "      <td>6.031041e+07</td>\n",
-       "      <td>121568696.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>191979623.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>82491.007366</td>\n",
-       "      <td>313548319</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1520600</td>\n",
-       "      <td>159789.192183</td>\n",
-       "      <td>7.504204</td>\n",
-       "      <td>1771.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.704184</td>\n",
-       "      <td>115847.423107</td>\n",
-       "      <td>57216.164087</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>217683.232366</td>\n",
-       "      <td>6.031041e+07</td>\n",
-       "      <td>121568696.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>191979623.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>82491.007366</td>\n",
-       "      <td>313548319</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1520600</td>\n",
-       "      <td>159789.192183</td>\n",
-       "      <td>7.504204</td>\n",
-       "      <td>1771.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.704184</td>\n",
-       "      <td>115847.423107</td>\n",
-       "      <td>57216.164087</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>217683.232366</td>\n",
-       "      <td>6.031041e+07</td>\n",
-       "      <td>121568696.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>191979623.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 63 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   title  game_time_mean  game_time_sum  game_time_min  game_time_max  \\\n",
-       "0      3    82491.007366      313548319              0        1520600   \n",
-       "1      0    82491.007366      313548319              0        1520600   \n",
-       "2      3    82491.007366      313548319              0        1520600   \n",
-       "3      3    82491.007366      313548319              0        1520600   \n",
-       "4      0    82491.007366      313548319              0        1520600   \n",
-       "\n",
-       "   game_time_std  game_time_skew  Activity  Assessment  Clip  ...  \\\n",
-       "0  159789.192183        7.504204    1771.0       261.0  37.0  ...   \n",
-       "1  159789.192183        7.504204    1771.0       261.0  37.0  ...   \n",
-       "2  159789.192183        7.504204    1771.0       261.0  37.0  ...   \n",
-       "3  159789.192183        7.504204    1771.0       261.0  37.0  ...   \n",
-       "4  159789.192183        7.504204    1771.0       261.0  37.0  ...   \n",
-       "\n",
-       "   (game_time, skew, NONE)  (game_time, skew, TREETOPCITY)  \\\n",
-       "0                      0.0                        5.704184   \n",
-       "1                      0.0                        5.704184   \n",
-       "2                      0.0                        5.704184   \n",
-       "3                      0.0                        5.704184   \n",
-       "4                      0.0                        5.704184   \n",
-       "\n",
-       "   (game_time, std, CRYSTALCAVES)  (game_time, std, MAGMAPEAK)  \\\n",
-       "0                   115847.423107                 57216.164087   \n",
-       "1                   115847.423107                 57216.164087   \n",
-       "2                   115847.423107                 57216.164087   \n",
-       "3                   115847.423107                 57216.164087   \n",
-       "4                   115847.423107                 57216.164087   \n",
-       "\n",
-       "   (game_time, std, NONE)  (game_time, std, TREETOPCITY)  \\\n",
-       "0                     0.0                  217683.232366   \n",
-       "1                     0.0                  217683.232366   \n",
-       "2                     0.0                  217683.232366   \n",
-       "3                     0.0                  217683.232366   \n",
-       "4                     0.0                  217683.232366   \n",
-       "\n",
-       "   (game_time, sum, CRYSTALCAVES)  (game_time, sum, MAGMAPEAK)  \\\n",
-       "0                    6.031041e+07                  121568696.0   \n",
-       "1                    6.031041e+07                  121568696.0   \n",
-       "2                    6.031041e+07                  121568696.0   \n",
-       "3                    6.031041e+07                  121568696.0   \n",
-       "4                    6.031041e+07                  121568696.0   \n",
-       "\n",
-       "   (game_time, sum, NONE)  (game_time, sum, TREETOPCITY)  \n",
-       "0                     0.0                    191979623.0  \n",
-       "1                     0.0                    191979623.0  \n",
-       "2                     0.0                    191979623.0  \n",
-       "3                     0.0                    191979623.0  \n",
-       "4                     0.0                    191979623.0  \n",
-       "\n",
-       "[5 rows x 63 columns]"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "comp_train_x.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comp_train_y = feature_engineering.comp_train_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3, 0, 3, 2, 3, 3, 2, 0, 3, 0])"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "comp_train_y[:10].values"
    ]
   },
   {
@@ -4736,21 +4417,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Set and Data Loader"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader, Dataset, SequentialSampler, RandomSampler\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "def convert_df_to_tensor(df):\n",
+    "    return torch.tensor(df.values)\n",
+    "\n",
+    "class BowlDataSet(Dataset):\n",
+    "    def __init__(self, df_x: pd.DataFrame, df_y: pd.DataFrame):\n",
+    "        self.x = convert_df_to_tensor(df_x)\n",
+    "        self.y = convert_df_to_tensor(df_y)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.x)\n",
+    "    \n",
+    "    def __getitem__(self, i):\n",
+    "        return self.x[i], self.y[i]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comp_train_ds = feature_engineering.comp_train_ds\n",
+    "train_ds = BowlDataSet(comp_train_ds[0], comp_train_ds[1])\n",
+    "valid_ds = BowlDataSet(comp_train_ds[2], comp_train_ds[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bs = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dl = DataLoader(train_ds, bs, shuffle=True, drop_last=True)\n",
+    "valid_dl = DataLoader(valid_ds, bs, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_sample = next(iter(train_dl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1156414, 20)"
+       "(torch.Size([32, 63]), torch.Size([32]))"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "batch_sample[0].shape, batch_sample[1].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = feature_engineering.comp_feature_number\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_hidden = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories = len(comp_train_y.unique())\n",
+    "categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=63, out_features=200, bias=True)\n",
+       "  (1): ReLU()\n",
+       "  (2): Linear(in_features=200, out_features=4, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = nn.Sequential(nn.Linear(m,nh), nn.ReLU(), nn.Linear(nh, categories))\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
