Added missing files

--- a/nbs_gil/dl2/02_fully_connected.ipynb
+++ b/nbs_gil/dl2/02_fully_connected.ipynb
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(-7.6999e-06), tensor(1.))"
+       "(tensor(-6.2598e-06), tensor(1.))"
       ]
      },
      "execution_count": 8,
@@ -244,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(-0.0193), tensor(1.0275))"
+       "(tensor(0.0252), tensor(0.9935))"
       ]
      },
      "execution_count": 19,
@@ -284,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(0.3941), tensor(0.6175))"
+       "(tensor(0.4058), tensor(0.5841))"
       ]
      },
      "execution_count": 22,
@@ -325,7 +325,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(-0.0001), tensor(0.0505))"
+       "(tensor(0.0002), tensor(0.0505))"
       ]
      },
      "execution_count": 24,
@@ -354,7 +354,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(0.4711), tensor(0.7399))"
+       "(tensor(0.5518), tensor(0.8328))"
       ]
      },
      "execution_count": 26,
@@ -424,7 +424,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0006), tensor(0.0506))"
+       "(tensor(0.0003), tensor(0.0506))"
       ]
      },
      "execution_count": 31,
@@ -444,7 +444,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(0.5237), tensor(0.7803))"
+       "(tensor(0.5196), tensor(0.8041))"
       ]
      },
      "execution_count": 32,
@@ -562,7 +562,7 @@
     {
      "data": {
       "text/plain": [
-       "(tensor(0.1590), tensor(0.8926))"
+       "(tensor(-0.0067), tensor(0.7880))"
       ]
      },
      "execution_count": 41,
@@ -598,7 +598,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.35 ms ± 863 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "2.66 ms ± 405 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -726,7 +726,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(27.3322)"
+       "tensor(26.0749)"
       ]
      },
      "execution_count": 51,
@@ -743,6 +743,167 @@
    "metadata": {},
    "source": [
     "### Gradients and backward pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([784, 50])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50000, 50])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = x_train @ w1 + b1\n",
+    "l1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50000, 50])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l2 = relu(l1)\n",
+    "l2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50, 1])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50000, 1])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = l2 @ w2 + b2\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_grad_ = 2. * (out.squeeze(-1) - y_train).unsqueeze(-1) / out.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50000, 1])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse_grad_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.7756e-04],\n",
+       "        [ 1.2907e-05],\n",
+       "        [-1.8068e-04],\n",
+       "        [-4.9977e-05],\n",
+       "        [-3.4041e-04],\n",
+       "        [-5.8920e-05],\n",
+       "        [-1.2690e-05],\n",
+       "        [-1.1787e-04],\n",
+       "        [-3.8138e-05],\n",
+       "        [-1.7217e-04]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse_grad_[:10]"
    ]
   },
   {
@@ -1434,7 +1595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
