--- a/nbs/dl2/09_optimizers.ipynb
+++ b/nbs/dl2/09_optimizers.ipynb
@@ -11,7 +11,94 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of torch failed: Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/__init__.py\", line 83, in <module>\n",
+      "    __all__ += [name for name in dir(_C)\n",
+      "NameError: name '_C' is not defined\n",
+      "]\n",
+      "[autoreload of torch.tensor failed: Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/tensor.py\", line 5, in <module>\n",
+      "    from torch._namedtensor_internals import unzip_namedshape, single_ellipsis_index, is_ellipsis\n",
+      "ImportError: cannot import name 'single_ellipsis_index' from 'torch._namedtensor_internals' (/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/_namedtensor_internals.py)\n",
+      "]\n",
+      "[autoreload of torch.functional failed: Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/functional.py\", line 396, in <module>\n",
+      "    del torch.unique_dim\n",
+      "AttributeError: unique_dim\n",
+      "]\n",
+      "[autoreload of torch.nn.modules failed: Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/nn/modules/__init__.py\", line 5, in <module>\n",
+      "    from .activation import Threshold, ReLU, Hardtanh, ReLU6, Sigmoid, Tanh, \\\n",
+      "ImportError: cannot import name 'GELU' from 'torch.nn.modules.activation' (/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/nn/modules/activation.py)\n",
+      "]\n",
+      "[autoreload of torch.nn.functional failed: Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 728, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/opt/anaconda3/envs/deeplearning/lib/python3.7/site-packages/torch/nn/functional.py\", line 45, in <module>\n",
+      "    \"\"\")\n",
+      "RuntimeError: function 'conv1d' already has a docstring\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,12 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "from exp.nb_08 import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??norm_imagenette"
    ]
   },
   {
@@ -1321,6 +1417,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
