Added latest notebooks before the competition ends

--- a/nbs_gil/m5/m5_lgbm_public_15.ipynb
+++ b/nbs_gil/m5/m5_lgbm_public_15.ipynb
@@ -283,53 +283,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_elapsed(dt, event_name='Christmas', col='event_name_1', event_map=event_name_1_map, before=False):\n",
-    "    dt.sort_values(['date'], ascending=[(not before)], inplace=True)\n",
-    "    day1 = np.timedelta64(1, 'D')\n",
-    "    last_date = np.datetime64()\n",
-    "    res = []\n",
-    "    event = event_map[event_name]\n",
-    "    for v,d in zip(dt[col].values, dt.date.values):\n",
-    "        if v == event:\n",
-    "            last_date = d\n",
-    "        elapsed = ((d-last_date).astype('timedelta64[D]') / day1)\n",
-    "        res.append(elapsed)\n",
-    "    field_name = f\"{'before' if before else 'after'}_{event_name.lower().replace(' ', '_')}\"\n",
-    "    dt[field_name] = res\n",
-    "    dt[field_name] = dt[field_name].fillna(0)\n",
-    "    dt[field_name] = dt[field_name].astype('int16')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ellapsed_fields = ['Christmas', 'Easter', 'Ramadan starts']\n",
-    "# for f in ellapsed_fields:\n",
-    "#     get_elapsed(cal, f, 'event_name_1', event_name_1_map, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_mean_over_period(dt, period='weekday'):\n",
-    "    df_sales_id_period = dt[['id', 'sales', period]].groupby(['id', period])[['sales']].mean().reset_index()\n",
-    "    df_sales_id_period['sales'] = df_sales_id_period['sales'].astype('float16')\n",
-    "    df_sales_id_period.rename(columns={'sales': f'sales_by_{period}'}, inplace=True)\n",
-    "    return dt.merge(df_sales_id_period, on=['id', period], how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -368,45 +321,8 @@
    "outputs": [],
    "source": [
     "add_days_before(cal)\n",
-    "add_days_before(cal, day=31, month=10, col_name='before_halloween')\n",
-    "add_days_before(cal, day=4, month=7, col_name='before_independence_day')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def event_in_week(event_field='event_name_1', cal_field_name='events_in_week'):\n",
-    "    events_in_week = []\n",
-    "    no_monday_yet = True\n",
-    "    for i, row in cal.iterrows():\n",
-    "        if row['date'].weekday() == 0: # Monday\n",
-    "            no_monday_yet = False\n",
-    "            counter = 0\n",
-    "            for j in range(7):\n",
-    "                data = cal.loc[i + j]\n",
-    "                if data[event_field] > 0:\n",
-    "                    counter += 1\n",
-    "            for j in range(7):\n",
-    "                events_in_week.append(counter)\n",
-    "        if no_monday_yet:\n",
-    "            events_in_week.append(0)\n",
-    "    assert(len(events_in_week) == len(cal))\n",
-    "    cal[cal_field_name] = events_in_week\n",
-    "    cal[cal_field_name] = cal[cal_field_name].astype('uint8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# event_in_week('event_name_1', 'events1_in_week')\n",
-    "# cal['events1_in_week_before_7'] = cal['events1_in_week'].shift(7, fill_value=0).astype('uint8')\n",
-    "# cal['events1_in_week_after_7'] = cal['events1_in_week'].shift(-7, fill_value=0).astype('uint8')"
+    "# add_days_before(cal, day=31, month=10, col_name='before_halloween')\n",
+    "# add_days_before(cal, day=4, month=7, col_name='before_independence_day')"
    ]
   },
   {
@@ -802,32 +718,6 @@
    ],
    "source": [
     "cal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_map = {'CA': 0, 'TX': 1, 'WI': 2}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_snap(dt):\n",
-    "    dt['snap'] = ((dt['snap_CA'] == 1) & (dt['state_id'] == state_map['CA']) \n",
-    "              | (dt['snap_TX'] == 1) & (dt['state_id'] == state_map['TX']) \n",
-    "              | (dt['snap_WI'] == 1) & (dt['state_id'] == state_map['WI']))\n",
-    "    \n",
-    "    dt['snap'] = dt['snap'].astype('uint8')\n",
-    "    \n",
-    "    for c in ['snap_CA', 'snap_TX', 'snap_WI']:\n",
-    "        del dt[c]"
    ]
   },
   {
@@ -1490,39 +1380,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_fea(dt, dropna=True):\n",
-    "    \n",
-    "    wins = [7, 28]\n",
-    "    lags = [7, 28]\n",
-    "    \n",
-    "    grouped_sales = dt[[\"id\",\"sales\"]].groupby(\"id\")[\"sales\"]\n",
-    "    \n",
-    "    for win in wins:\n",
-    "        mean_col = f'mean_{win}'\n",
-    "        emean_col = f'e{mean_col}' # exponential mean average\n",
-    "        esmean_col = f'es{mean_col}'\n",
-    "        dt[emean_col] = grouped_sales.transform(lambda x : x.ewm(span=win, adjust=False).mean())\n",
-    "        dt[esmean_col] = grouped_sales.transform(lambda x : x.ewm(alpha=1/win, adjust=False).mean())\n",
-    "        for lag in lags:\n",
-    "            dt[f'emean_{win}_{lag}'] = dt[[\"id\", emean_col]].groupby(\"id\").shift(lag)\n",
-    "            dt[f'esmean_{win}_{lag}'] = dt[[\"id\", esmean_col]].groupby(\"id\").shift(lag)\n",
-    "        del dt[emean_col]\n",
-    "        del dt[esmean_col]\n",
-    "            \n",
-    "    ra = [1, 2]\n",
-    "    for simple_lag in ra:\n",
-    "        dt[f'lag_{simple_lag}'] = dt[[\"id\",\"sales\"]].groupby(\"id\")[\"sales\"].shift(simple_lag)\n",
-    "    \n",
-    "    if dropna == True:\n",
-    "        dt.dropna(inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -1538,7 +1395,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "create_fea(df)"
+    "m5_common.create_fea(df)"
    ]
   },
   {
@@ -2003,6 +1860,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_features = ['id', 'item_id', 'dept_id', 'store_id', 'cat_id', 'state_id', 'd', 'sales', 'date', 'wm_yr_wk', 'weekday', 'wday', 'month', 'year', \n",
+    "                     'event_name_1', 'event_type_1', 'event_name_2', 'event_type_2', 'snap_CA', 'snap_TX', 'snap_WI', 'before_christmas', 'sell_price', 'Dayofyear', 'week', \n",
+    "                     'mday', 'emean_7_1', 'esmean_7_1', 'emean_7_7', 'esmean_7_28', 'emean_28_1', 'esmean_28_1', 'emean_28_7', 'esmean_28_7', 'emean_28_28', 'esmean_28_28', 'lag_1', 'lag_2']\n",
+    "m5_common.remove_features(df, selected_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
@@ -2061,18 +1930,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if not 'n_estimators' in locals():\n",
+    "    n_estimators = 2000\n",
+    "    \n",
+    "if not 'tweedie_variance_power' in locals():\n",
+    "    tweedie_variance_power = 1.28\n",
+    "    \n",
+    "if not 'sub_row' in locals():\n",
+    "    sub_row = 0.75\n",
+    "    \n",
+    "if not 'bagging_freq' in locals():\n",
+    "    bagging_freq = 1\n",
+    "    \n",
+    "if not 'learning_rate' in locals():\n",
+    "    learning_rate = 0.075\n",
+    "\n",
     "leave_size = 10\n",
     "params = {\n",
     "        'boosting_type': 'gbdt',\n",
     "        \"objective\" : \"tweedie\",\n",
-    "        'tweedie_variance_power': 1.25,\n",
+    "        'tweedie_variance_power': tweedie_variance_power,\n",
     "        \"metric\" :\"rmse\",\n",
     "        \"force_row_wise\" : True,\n",
-    "        \"learning_rate\" : 0.075,\n",
-    "#         \"learning_rate\" : 0.08,\n",
+    "        \"learning_rate\" : learning_rate,\n",
     "#         \"sub_feature\" : 0.8,\n",
-    "        \"sub_row\" : 0.75,\n",
-    "        \"bagging_freq\" : 1,\n",
+    "        \"sub_row\" : sub_row,\n",
+    "        \"bagging_freq\" : bagging_freq,\n",
     "#         \"lambda_l1\" : 0.2,\n",
     "        \"lambda_l2\" : 0.1,\n",
     "        \"nthread\" : 10,\n",
@@ -2080,7 +1963,7 @@
     "        'verbosity': 20,\n",
     "        'num_leaves': 2**leave_size-1,\n",
     "        \"min_data_in_leaf\": 2**(leave_size + 1)-1,\n",
-    "        \"n_estimators\": 1400\n",
+    "        \"n_estimators\": n_estimators\n",
     "}"
    ]
   },
@@ -2350,8 +2233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m_lgb = lgb.Booster(model_file=str(path/\"m5_model_best.lgb\"))\n",
-    "m_lgb = lgb.Booster(model_file=str(path/\"m5_model_1200.lgb\"))"
+    "m_lgb = lgb.Booster(model_file=str(path/\"m5_model_best.lgb\"))"
    ]
   },
   {
@@ -2457,7 +2339,7 @@
     "    day = fday + timedelta(days=tdelta)\n",
     "    print(tdelta, day)\n",
     "    tst = te[(te.date >= day - timedelta(days=max_lags)) & (te.date <= day)].copy()\n",
-    "    create_fea(tst, False)\n",
+    "    m5_common.create_fea(tst, False)\n",
     "    tst = tst.loc[tst.date == day, train_cols]\n",
     "    te.loc[te.date == day, \"sales\"] = m_lgb.predict(tst)"
    ]
